# device_faker

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE-2.0  NOTICES  Update.json  build.rs  pack_module.py
.github/workflows/: build.yml  cleanup-actions-history.yml  cleanup-releases.yml
device_faker/: Cargo.toml
device_faker/src/: companion.rs  hooks.rs  lib.rs  simple_logging.rs
docs/: CONFIG.md
docs/en/: CONFIG.md
module/: config.toml  customize.sh  module.prop
module/webroot/: index.html
module/webroot/assets/: css-B8sY0tIL.css  css-BD6JLjLz.js  css-BLILHJmw.js  css-DNOYeCin.js  css-PS60_Gtt.js  index--NzIONV6.js  index-1cFEQesh.js  index-4XEJjOR9.js  index-B8HnGmPj.js  index-B9tozZAY.css  index-BQQBzTQq.js  index-Bnmmez4t.css  index-CI2Yi7qH.js  index-CM78rTNR.css  index-Ce8WkQND.js  index-Cs2WO5cU.css  index-CtUBzqcu.css  index-D1JdL8F0.js  index-D9Duz3GT.js  index-DOGdHQ0j.js  index-DWRUwVUo.js  index-Dmh5mfI1.css  index-DpOXZ5I7.js  index-Dr52ALDD.css  index-PPt-sky-.js  index-SmPUnUym.css  index-UdcUrAYS.css  index-XczNoMVV.js  index-Y74ubnQ9.js  index-nH5Hoalp.css  index-qz1QVBzr.js
scripts/: sync_version.js  sync_version.py
src/: config.rs  lib.rs
webui/: .gitignore  .prettierignore  .prettierrc.json  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webui/src/: App.vue  components.d.ts  main.ts  style.css
webui/src/components/: OnlineTemplateDialog.vue
webui/src/composables/: useAppIcons.ts
webui/src/pages/: AppsPage.vue  SettingsPage.vue  StatusPage.vue  TemplatePage.vue
webui/src/stores/: apps.ts  config.ts  settings.ts
webui/src/types/: index.ts  kernelsu-alt.d.ts
webui/src/utils/: elementPlus.ts  i18n.ts  ksu.ts  mockData.ts  package.ts
(+7 files in other folders)
