[package]
name = "device_faker"
version = "1.2.0"
edition = "2024"
authors = ["Seyud"]

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
jni = { version = "0.21", default-features = false }
log = { version = "^0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
zygisk-api = { git = "https://github.com/Seyud/zygisk-api-rs.git" }
serde_json = "1.0"
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[lib]
name = "zygisk"
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
strip = true
codegen-units = 1
overflow-checks = false